--- a/core/templates/core/uploadfile.html
+++ b/core/templates/core/uploadfile.html
@@ -4,6 +4,8 @@
 <!-- input csv file django -->
 <form method="post" enctype="multipart/form-data">
   {% csrf_token %}
-  <input type="file" name="file" accept=".xls,.xlsx">
+  <input id='file' type="file" name="file" accept=".xls,.xlsx">
   <input type="submit" value="Upload">
 </form>
+
+{{data|safe}}
