✨ add get route with gender queryparam

--- a/core/templates/core/uploadfile.html
+++ b/core/templates/core/uploadfile.html
@@ -10,8 +10,8 @@
 
 {% if success %}
 <div class="alert alert-success" role="alert">
-  <h4>Os dados foram salvos com sucesso.</h4>
-  <p>API disponível em <a href="http://127.0.0.1:8000/api/v1">neste link</a></p>
+  <h2>Os dados foram salvos com sucesso.</h2>
+  <h3>API disponível em <a href="http://127.0.0.1:8000/api/v1">neste link</a></h3>
 </div>
 {% endif %}
 
