no selected file error check

--- a/core/templates/core/uploadfile.html
+++ b/core/templates/core/uploadfile.html
@@ -1,5 +1,7 @@
 <br>
-<h1>Faça o upload do arquivo CSV</h1>
+<h3>API disponível em <a href="http://127.0.0.1:8000/api/v1">neste link</a></h3>
+
+<h1>Faça o upload da tabela</h1>
 
 <!-- input csv file django -->
 <form method="post" enctype="multipart/form-data">
@@ -8,10 +10,9 @@
   <input type="submit" value="Upload">
 </form>
 
-{% if success %}
+{% if message %}
 <div class="alert alert-success" role="alert">
-  <h2>Os dados foram salvos com sucesso.</h2>
-  <h3>API disponível em <a href="http://127.0.0.1:8000/api/v1">neste link</a></h3>
+  <h2>{{message}}</h2>
 </div>
 {% endif %}
 
