--- a/core/templates/core/uploadfile.html
+++ b/core/templates/core/uploadfile.html
@@ -1,5 +1,5 @@
 <br>
-<h3>API disponível em <a href="http://127.0.0.1:8000/api/v1">neste link</a></h3>
+<h3>API disponível <a href="http://127.0.0.1:8000/api/v1">neste link</a></h3>
 
 <h1>Faça o upload da tabela</h1>
 
